[tool.poetry]
name = "jetblack-rabbitmqmon"
version = "2.0.0"
description = "RabbitMQ Monitor"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rob-blackbourn/jetblack-rabbitmqmon"
packages = [
    { include = "jetblack_rabbitmqmon" }
]

[tool.poetry.dependencies]
python = "^3.7"
bareclient = { version = "^4.0.1", optional = true }
aiohttp = {version = "^3.6.2", optional = true }

[tool.poetry.dev-dependencies]
autopep8 = "^1.4"
pytest = "^5.1"
pylint = "^2.3"
mypy = "^0.720.0"
rope = "^0.14.0"

[tool.poetry.extras]
bareclient = [ "bareclient" ]
aiohttp = [ "aiohttp" ]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
