[tool.poetry]
name = "gascode-rabbitmqmon"
version = "2.0.0"
description = "RabbitMQ Monitor"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rob-blackbourn/gascode-rabbitmqmon"
packages = [
    { include = "gascode_rabbitmqmon" }
]

[tool.poetry.dependencies]
python = "^3.7"
bareclient = { version = "^4", optional = true }
aiohttp = {version = "^3.6.2", optional = true }

[tool.poetry.dev-dependencies]
autopep8 = "^1.4"
pytest = "^5.1"
pylint = "^2.3"
mypy = "^0.720.0"
rope = "^0.14.0"

[tool.poetry.extras]
bareclient = [ "bareclient" ]
aiohttp = [ "aiohttp" ]

[[tool.poetry.source]]
name = "gascode"
url = "https://www.jetblack.net/nexus/repository/pypi-group/simple/"
default = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
