[project]
name = "jetblack-rabbitmqmon"
version = "1.0.0-alpha.0"
description = "RabbitMQ Monitor"
authors = [
    { name = "Rob Blackbourn", email = "rob.blackbourn@gmail.com" }
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]
readme = "README.md"
dependencies = []
license = "Apache-2.0"
license-files = [
    "LICENSE"
]
keywords = [
    "rabbitmq",
    "monitor",
    "asyncio",
]

[project.optional-dependencies]
dev = [
    "autopep8",
    "coverage",
    "mypy",
    "pylint",
    "types-setuptools",
]
aiohttp = [ "aiohttp>=3,<4" ]
httpx = [ "httpx>=0.26,<1" ]

[project.urls]
Homepage = "https://rob-blackbourn.github.io/jetblack-rabbitmqmon"
Repository = "https://github.com/rob-blackbourn/jetblack-rabbitmqmon"
Issues = "https://github.com/rob-blackbourn/jetblack-rabbitmqmon/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# pylint
[tool.pylint.main]
py-version = "3.12"
jobs = 4

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_"]
bad-names = ["foo", "bar"]

[tool.pylint."messages control"]
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "use-implicit-booleaness-not-comparison-to-string",
    "use-implicit-booleaness-not-comparison-to-zero",
    "missing-module-docstring",
]

# mypy
[tool.mypy]
files = [ "src/jetblack_rabbitmqmon", "tests", "examples" ]
